--- a/src/assets/styles/cmps/PlayerActions.scss
+++ b/src/assets/styles/cmps/PlayerActions.scss
@@ -1,35 +1,15 @@
-.player-actions {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(50px, 1fr));
-  gap: 1em;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  width: 100%;
-  height: auto;
-  //align all items to the center of thier cell
-  justify-content: center;
-  align-items: center;
-
-  button {
-    background-color: transparent;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-
-    &:hover {
-      svg {
-        fill: $logo-clr;
-        height: 18px;
-        width: 18px;
-      }
+@include for-normal-layout {
+  .player-actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    padding: 1em;
+    border-radius: 0 0 0.5em 0.5em;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
+    button {
+      border: none;
+      background-color: transparent;
     }
-  }
-  svg {
-    fill: $sec-font-clr;
-    height: 16px;
-    width: 16px;
-    cursor: pointer;
   }
 }
