add queue to side bar

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -65,3 +65,4 @@
 @import "cmps/Loader.scss";
 @import "cmps/StationsMenu.scss";
 @import "cmps/AddToStationButton.scss";
+@import "cmps/QueueMenu.scss";
