--- a/src/assets/styles/cmps/AddSongs.scss
+++ b/src/assets/styles/cmps/AddSongs.scss
@@ -44,4 +44,24 @@ $placeholder-color: #9e9e9e;
     font-size: 24px;
     margin-bottom: 20px;
   }
+  .song-actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .add-to-playlist {
+      background-color: transparent;
+      min-width: em(60px);
+      border: 1px solid #fff;
+      border-radius: 25%;
+      color: #fff;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+
+      &:hover {
+        border: 1.5px solid #fff;
+      }
+    }
+  }
 }
