--- a/src/assets/styles/cmps/Loader.scss
+++ b/src/assets/styles/cmps/Loader.scss
@@ -4,8 +4,12 @@
   align-items: center;
   justify-content: center;
   background-color: #121212; // Dark background color
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  position: fixed;
 
   .loader-circle {
     width: 12px;
