--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -29,6 +29,11 @@
     }
   }
 
+  .profile-btn {
+    margin-left: auto;
+
+  }
+
   .input-wrapper {
     display: none;
     background-color: $input-bg-clr;
@@ -38,11 +43,14 @@
     height: em(48px);
     padding: em(6px) em(15px);
     width: em(300px);
+
     &:focus-within {
       border: em(2px) solid white;
+
       &:hover {
         border: em(2px) solid white;
       }
+
       svg {
         fill: white;
       }
