--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -50,7 +50,7 @@
   overflow-y: auto;
   border-radius: 8px;
   background-color: $sec-bg-clr;
-  .maiin-container-bg {
+  .main-container-bg {
     transition: background-image 2s ease;
   }
 
