--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -63,87 +63,6 @@
 @import "cmps/AddSongs.scss";
 @import "cmps/ContextMenu.scss";
 @import "cmps/Loader.scss";
-
-.queue-menu {
-  padding: 20px;
-  color: #fff;
-  max-width: 400px;
-  font-family: Arial, sans-serif;
-
-  h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-
-  h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-  .now-playing,
-  .next-up {
-    margin-bottom: 20px;
-  }
-
-  .song-details {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-
-    img {
-      width: 50px;
-      height: 50px;
-      margin-right: 10px;
-      border-radius: 5px;
-    }
-
-    h4 {
-      font-size: 16px;
-      margin: 0;
-    }
-
-    p {
-      font-size: 14px;
-      color: #b3b3b3;
-      margin: 0;
-    }
-
-    .current-song {
-      color: #1db954;
-    }
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-
-    .song-item {
-      display: flex;
-      align-items: center;
-      margin-bottom: 10px;
-
-      img {
-        width: 50px;
-        height: 50px;
-        margin-right: 10px;
-        border-radius: 5px;
-      }
-
-      .song-details {
-        display: flex;
-        flex-direction: column;
-
-        h4 {
-          font-size: 16px;
-          margin: 0;
-        }
-
-        p {
-          font-size: 14px;
-          color: #b3b3b3;
-          margin: 0;
-        }
-      }
-    }
-  }
-}
+@import "cmps/StationsMenu.scss";
+@import "cmps/AddToStationButton.scss";
+@import "cmps/QueueMenu.scss";
