--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -22,10 +22,10 @@
 }
 
 .separator {
-  width: 0.08em;
+  width: 0.2rem;
   cursor: col-resize;
   background-color: transparent;
-  height: 97%;
+  height: 98%;
   align-self: center;
   margin: 0 4px;
   transition: background-color 0.3s ease, height 0.3s ease, margin 0.3s ease;
@@ -48,9 +48,11 @@
 .main-container {
   flex-grow: 1;
   overflow-y: auto;
-  margin-right: 8px;
   border-radius: 8px;
   background-color: $sec-bg-clr;
+  .main-container-bg {
+    transition: background-image 2s ease;
+  }
 
   &::-webkit-scrollbar {
     background-color: transparent;
