--- a/src/assets/styles/cmps/VolumeBar.scss
+++ b/src/assets/styles/cmps/VolumeBar.scss
@@ -1,5 +1,10 @@
 .volume-bar {
+  padding: 0;
+  margin: 0;
   width: em(100px);
+  display: flex;
+  align-items: center;
+
   .volume-bar-track {
     color: #fff;
   }
@@ -16,15 +21,6 @@
     height: 0px;
     &:hover {
       box-shadow: 0 0 0 0;
-    }
-  }
-  &:hover {
-    .volume-bar-thumb {
-      width: rem(15px);
-      height: rem(15px);
-    }
-    .volume-bar-track {
-      color: $logo-clr;
     }
   }
 }
