--- a/src/assets/styles/cmps/StationEditModal.scss
+++ b/src/assets/styles/cmps/StationEditModal.scss
@@ -12,117 +12,124 @@
 }
 
 .station-edit-modal {
-  background: #333;
-  color: white;
+  background-color: #282828;
   padding: 20px;
-  border-radius: 8px;
-  max-width: 600px;
-  width: 100%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 500px;
+  max-width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 
   h1 {
-    grid-column: 1 / -1;
-    margin-bottom: 20px;
     font-size: 1.5rem;
-  }
-
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
+    margin-bottom: 20px;
     color: #fff;
-    font-size: 1.5rem;
-    cursor: pointer;
   }
 
-  .img-uploader {
-    grid-column: 1 / 2;
+  .main-info {
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 20px;
+    max-width: 100%;
 
-    img {
-      max-width: 100%;
-      border-radius: 5px;
-    }
-
-    .loading-indicator {
+    .img-uploader {
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      position: relative;
       width: 100%;
-      height: 200px;
-      background-color: #2c2c2c;
-      border-radius: 5px;
-      color: #fff;
-      font-size: 1rem;
+      height: 100%;
+      max-width: em(150px);
+      max-height: em(150px);
+      aspect-ratio: 1/1;
+      label {
+        display: block;
+        cursor: pointer;
+
+        img {
+          object-fit: cover;
+          border-radius: 4px;
+          width: 100%;
+          height: 100%;
+        }
+
+        input {
+          display: none;
+        }
+      }
+
+      .loading-indicator {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+        background-color: #444;
+        color: #fff;
+        font-size: 0.9rem;
+      }
     }
 
-    input[type="file"] {
-      display: none;
-    }
-  }
-
-  .form-fields {
-    grid-column: 2 / -1;
-    display: flex;
-    flex-direction: column;
-
-    label {
-      margin-bottom: 10px;
-      font-size: 0.9rem;
-    }
-
-    input[type="text"],
-    textarea {
+    .form-fields {
+      flex-grow: 2;
+      display: flex;
+      flex-direction: column;
+      margin-left: 20px;
       width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: none;
-      border-radius: 5px;
-      background-color: #2c2c2c;
-      color: #fff;
-    }
+      height: 100%;
 
-    textarea {
-      resize: none;
-      height: 100px;
+      input,
+      textarea {
+        width: 100%;
+        background-color: #333;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        padding: 10px;
+        margin-bottom: 10px;
+        font-size: 1rem;
+
+        &::placeholder {
+          color: #aaa;
+        }
+      }
+
+      textarea {
+        resize: none;
+        height: 100%;
+        //make it stretch to fill the remaining space
+        flex-grow: 1;
+        max-height: em(130px);
+      }
     }
   }
 
   .actions {
-    grid-column: 2 / -1;
     display: flex;
     justify-content: flex-end;
 
     button {
-      padding: 10px;
+      padding: 10px 20px;
+      background-color: white;
+      color: #000;
       border: none;
-      border-radius: 5px;
-      background-color: #fff;
-      color: #333;
-      font-size: 1rem;
+      border-radius: 50px;
       cursor: pointer;
-      transition: background-color 0.3s;
+      font-size: 1rem;
+      transition: background-color 0.2s;
 
       &:hover {
-        background-color: #1db954;
+        background-color: #f0f0f0;
       }
     }
   }
 
   .disclaimer {
-    grid-column: 1 / -1;
-    margin-top: 20px;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
+    color: #aaa;
     text-align: center;
-    color: #b3b3b3;
+    margin-top: 20px;
   }
 }
