--- a/src/assets/styles/cmps/StationEditModal.scss
+++ b/src/assets/styles/cmps/StationEditModal.scss
@@ -38,10 +38,8 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      width: 100%;
-      height: 100%;
-      max-width: em(150px);
-      max-height: em(150px);
+      width: em(150px);
+      height: em(150px);
       aspect-ratio: 1/1;
       label {
         display: block;
@@ -78,7 +76,6 @@
       flex-direction: column;
       margin-left: 20px;
       width: 100%;
-      height: 100%;
 
       input,
       textarea {
@@ -99,9 +96,12 @@
       textarea {
         resize: none;
         height: 100%;
-        //make it stretch to fill the remaining space
+        flex-grow: 2;
+        max-height: 130px;
+        font-size: 0.7rem;
+      }
+      input[type="text"] {
         flex-grow: 1;
-        max-height: em(130px);
       }
     }
   }
