--- a/src/assets/styles/cmps/PlayerActions.scss
+++ b/src/assets/styles/cmps/PlayerActions.scss
@@ -1,12 +1,15 @@
 @include for-normal-layout {
   .player-actions {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     gap: 1em;
-    padding: 1em;
+    padding: 0.4em;
     border-radius: 0 0 0.5em 0.5em;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
+    svg {
+      fill: white;
+    }
     button {
       border: none;
       background-color: transparent;
