--- a/src/assets/styles/cmps/SongList.scss
+++ b/src/assets/styles/cmps/SongList.scss
@@ -14,7 +14,7 @@
     .song-order,
     .song-date-added,
     .song-duration {
-      text-align: center;
+      text-align: left;
     }
 
     .song-title,
