--- a/src/assets/styles/cmps/AddSongs.scss
+++ b/src/assets/styles/cmps/AddSongs.scss
@@ -9,6 +9,8 @@ $placeholder-color: #9e9e9e;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    max-width: 50vw;
+    width: 100%;
     .song-info {
       display: flex;
       align-items: center;
