--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -65,7 +65,7 @@ a {
 svg {
   min-width: 15px;
   min-height: 15px;
-  fill: black;
+  fill: $main-font-clr;
   background-color: transparent;
 }
 
