--- a/src/assets/styles/cmps/FullPlayer.scss
+++ b/src/assets/styles/cmps/FullPlayer.scss
@@ -1,16 +1,16 @@
 .full-player {
   display: flex;
   width: 100%;
-  height: 100%;
 }
 
 @include for-normal-layout {
   .full-player {
     display: grid;
-    grid-template-columns: 10fr 14fr 10fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     gap: em(10px);
-    margin-top: em(8px);
+    justify-content: center;
+    align-items: center;
 
     .song-details {
       grid-column: 1;
