--- a/src/assets/styles/cmps/DropDownMenu.scss
+++ b/src/assets/styles/cmps/DropDownMenu.scss
@@ -29,13 +29,20 @@
   display: block;
   position: absolute;
   min-width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 8px 16px 5px rgba(0, 0, 0, 0.7);
   z-index: 1;
   padding: 0;
   margin: 0;
   top: 100%; // Ensure it appears below the toggle
-  right: 0; // Ensure it appears aligned to the right
   border-radius: 5px;
+
+  &.right {
+    left: auto;
+  }
+
+  &.left {
+    right: 0;
+  }
 
   h3 {
     padding: 10px 12px;
