--- a/src/assets/styles/cmps/VolumeBar.scss
+++ b/src/assets/styles/cmps/VolumeBar.scss
@@ -4,6 +4,8 @@
   width: em(100px);
   display: flex;
   align-items: center;
+  margin-left: em(3px);
+  margin-right: em(3px);
 
   .volume-bar-track {
     color: #fff;
