--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,80 +1,106 @@
 .page-container {
-  display: flex;
-  flex-direction: column;
+  display: none;
+}
+
+.page-container-mobile {
+  display: grid;
+  grid-template-rows: 80fr 10fr 10fr;
+  grid-template-columns: 1fr;
   height: 100vh;
-  padding: em(10px);
-}
-
-.main-content {
-  display: flex;
-  flex-grow: 1;
-  overflow: hidden;
-}
-
-.nav-bar-cotent {
-  width: 100%;
-  height: 100%;
-}
-.nav-bar {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.separator {
-  width: 0.2rem;
-  cursor: col-resize;
-  background-color: transparent;
-  height: 98%;
-  align-self: center;
-  margin: 0 4px;
-  transition: background-color 0.3s ease, height 0.3s ease, margin 0.3s ease;
-
-  &:hover {
-    background-color: rgba($color: $sec-font-clr, $alpha: 0.7);
+  width: 100vw;
+  .nav-bar {
+    grid-row: -1;
   }
-
-  &.dragging {
-    background-color: $sec-font-clr;
+  .main-container {
+    grid-row: 1;
+  }
+  .app-footer {
+    grid-row: 2;
   }
 }
 
-.content-area {
-  display: flex;
-  flex-grow: 1;
-  overflow: hidden;
-}
-
-.main-container {
-  flex-grow: 1;
-  overflow-y: auto;
-  border-radius: 8px;
-  background-color: $sec-bg-clr;
-  .main-container-bg {
-    transition: background-image 2s ease;
+@include for-normal-layout {
+  .page-container-mobile {
+    display: none;
+  }
+  .page-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    padding: em(10px);
   }
 
-  &::-webkit-scrollbar {
+  .main-content {
+    display: flex;
+    flex-grow: 1;
+    overflow: hidden;
+  }
+
+  .nav-bar-cotent {
+    width: 100%;
+    height: 100%;
+  }
+  .nav-bar {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .separator {
+    width: 0.2rem;
+    cursor: col-resize;
     background-color: transparent;
-    scrollbar-width: thin;
+    height: 98%;
+    align-self: center;
+    margin: 0 4px;
+    transition: background-color 0.3s ease, height 0.3s ease, margin 0.3s ease;
+
+    &:hover {
+      background-color: rgba($color: $sec-font-clr, $alpha: 0.7);
+    }
+
+    &.dragging {
+      background-color: $sec-font-clr;
+    }
   }
 
-  &:hover::-webkit-scrollbar-thumb {
-    background: #555;
+  .content-area {
+    display: flex;
+    flex-grow: 1;
+    overflow: hidden;
   }
-}
 
-.toggle-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
+  .main-container {
+    flex-grow: 1;
+    overflow-y: auto;
+    border-radius: 8px;
+    background-color: $sec-bg-clr;
+    .main-container-bg {
+      transition: background-image 2s ease;
+    }
 
-.app-footer {
-  flex-shrink: 0;
-}
+    &::-webkit-scrollbar {
+      background-color: transparent;
+      scrollbar-width: thin;
+    }
 
-.side-pop-up {
-  display: flex;
-  flex-direction: column;
+    &:hover::-webkit-scrollbar-thumb {
+      background: #555;
+    }
+  }
+
+  .toggle-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
+  .app-footer {
+    flex-shrink: 0;
+  }
+
+  .side-pop-up {
+    display: flex;
+    flex-direction: column;
+  }
 }
