--- a/src/assets/styles/cmps/ArtistResults.scss
+++ b/src/assets/styles/cmps/ArtistResults.scss
@@ -29,7 +29,7 @@
         width: 0;
         height: 0;
         opacity: 0;
-        background-color: $logo-clr;
+        background-color: #007bff;
         border: none;
         border-radius: 50%;
         z-index: 2;
